# visual-policy-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: collect_demos.py
envs/: panda_reach_env.py
envs/panda/: scene.xml
evals/: eval_utils.py  robustness_tests.py  wrappers.py
models/checkpoints/clip_frozen/: logs.csv
models/checkpoints/dino_frozen/: logs.csv
models/checkpoints/resnet_frozen/: logs.csv
notebooks/: data.ipynb  env.ipynb  eval.ipynb  expert.ipynb  training.ipynb
policies/: action_head.py  base_policy.py  clip_policy.py  cnn_policy.py  dinov2_policy.py  load_policy.py  resnet_policy.py  scripted_policy.py
policies/encoders/: clip_encoder.py  cnn_encoder.py  dinov2_encoder.py  resnet_encoder.py
results/metrics/: eval_results.json  robustness_results.json
training/: render_dataset.py  train_bc_e2e.py  train_bc_frozen.py
