[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-policy-learning"
version = "0.1.0"
description = "Frozen vision encoders for visuomotor behavior cloning on a MuJoCo Panda reach task"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Noel Elias" },
]
keywords = ["imitation-learning", "robotics", "mujoco", "behavior-cloning", "vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mujoco>=3.8,<4",
    "gymnasium>=1.0,<2",
    "numpy>=1.24,<3",
    "h5py>=3.8,<4",
    "torch>=2.0,<3",
    "torchvision>=0.15,<1",
    "timm>=0.9,<2",
    "open-clip-torch>=2.24,<4",
    "transformers>=4.30,<5",
    "imageio>=2.31,<3",
    "imageio-ffmpeg>=0.4,<1",
    "tqdm>=4.65,<5",
    "matplotlib>=3.7,<4",
    "pandas>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/noelkelias/visual-policy-learning"
Repository = "https://github.com/noelkelias/visual-policy-learning"
Issues = "https://github.com/noelkelias/visual-policy-learning/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "policies*", "training*", "evals*", "data*"]
